fixed small width collapse button

--- a/style.css
+++ b/style.css
@@ -11,11 +11,10 @@
     --border : #e9ecef;
 }
 
-
 body{
     font-family: 'Roboto', sans-serif;
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
 }
 
 a{
@@ -60,11 +59,11 @@ a{
 /*SECTIONS*/
 
 /*------ Navigation Menu ------*/
+
 .navbar{
     position: relative;
     display: flex;
-    /* display items in a row */
-    flex-direction: row;
+    flex-direction: row; /* display items in a row */
     justify-content: space-between;
     padding: 10px;
 }
@@ -81,21 +80,21 @@ a{
 }
 
 .nav-link{
-    font-family: 'Poppins', sans-serif;
     font-size: 18px;
     margin: 12px;
     color: var(--dark);
+    font-family: 'Poppins', sans-serif;
 }
-search-box
+
 .nav-link:hover{
     color: var(--primary-color);
 }
 
 .search-box{
     display: inline;
-    border-right: 1px solid var(--secondary); /* the little line */
+    border-right: 1px solid var(--secondary);
     padding-right: 12px;
-    margin-right: 10px; ;
+    margin-right: 10px;
 }
 
 .toggle-button{
@@ -115,7 +114,7 @@ search-box
 
 /*MEDIA QUERY */
 
-@media(max-width: 992px){
+@media (max-width : 992px){
     .navbar{
         flex-direction: column;
     }
@@ -129,22 +128,21 @@ search-box
 
     .collapse{
         max-height: 0;
-        overflow: hidden; /* hides letter and icon buttons whne width is smaller than xyz  */
-        transition: all 0.8s cubic-bezier(0.51, -0.15, 0, 0.98);
+        overflow: hidden;
+        transition: all 0.8s cubic-bezier(0.51,-0.15, 0, 0.98);
     }
-        
-    /*THIS DOES NOT WORK AS INTENDED FOR SOME REASON*/
-    .collapse.nav-link{
+
+    .collapse .nav-link{
         display: block;
         text-align: center;
     }
 
-    .collapse.toggle{
-        max-height: 500px;
-    }
-
     .search-box{
         border-right: none;
-    } 
+    }
+
+    .collapse-toggle{
+        max-height: 500px;
+    }
     
 }
